styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}

.hero-section {
    height: 100vh;
    background-color: seagreen;

    display: flex;
    flex-direction: column;
}

.hero-section nav {
    background-color: sienna;
    padding: 1rem 2rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.hero-section .btn-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 24px;
}

.hero-section nav button {
    padding: 12px 16px;
    border: none;
    border-radius: 2rem;
    cursor: pointer;
    background-color: #ddbf14;
    color: sienna;
    font-size: 1.2rem;
    font-weight: bolder;
}

.hero-section nav button:hover {
    color: rgba(160, 81, 45, 0.698);
}

.main-container {
    display: flex;
    justify-content: flex-start;
    /* align-items: center; */
    height: 100%;
}

.main-container .start-game {
    height: 300px;
    width: 400px;
    border: 2px solid sienna;
    border-radius: 1.5rem;
    padding: 1rem 2rem;
    margin-left: 100px;
    margin-top: 50px;
    background-color: #FFF7E9;
    /* display: flex; */
        display: flex;
    flex-direction: column;

}

.main-container .start-game button {
    border-radius: 1rem;
    border: 2px solid sienna;
    padding: 12px 16px;
    background: none;
    cursor: pointer;
    font-size: 1.2rem;
    color: sienna;
}


.hidden {
    display: none;
}

.main-container .start-game .size-btns {
    display: flex;
    justify-content: space-around;
}

.main-container .start-game .start-btn, .text-title   {
    text-align: center;
    margin: 1rem 0;
}

.main-container .start-game .choose-cards {
    flex: 1;
    /* padding: 2rem; */
    background-color: seagreen;
    /* ! parent: .start-game  is not a flex container */
}


/* ! Gotta debug the flex: 1; not working */

.game-container {
    width: 50%;
    height: 100px;
    /* background-color: sienna; */

    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    gap: 12px;
}

.game-container img {
    height: 150px;
    width: 100px;
    cursor: pointer;
}

